Admin Portal - created controller, view, and ngController. All emptier as empty as my bank account.

--- a/Centric/Centric.csproj
+++ b/Centric/Centric.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\components\App_Scripts\corePowerApp.js" />
-    <None Include="wwwroot\components\App_Scripts\Controllers\DashboardController.js" />
+    <None Include="wwwroot\components\App_Scripts\Controllers\AdminController.js" />
     <None Include="wwwroot\lib\angular\app.js" />
     <None Include="wwwroot\lib\angular\Controllers\DashboardController.js" />
   </ItemGroup>
