--- a/Centric/Centric.csproj
+++ b/Centric/Centric.csproj
@@ -7,6 +7,7 @@
     <Content Remove="wwwroot\lib\angular\Controllers\DashboardController.js" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="angular-file-upload" Version="12.2.13" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
