ng-file-upload should now work.
Fixed stupid bug caused by placing script src for file upload a line above script src for angular.js in Layout.cshtml.

Make sure all scripts with angular dependencies refrenced after angular tag in future.

--- a/Centric/Centric.csproj
+++ b/Centric/Centric.csproj
@@ -22,4 +22,8 @@
     <None Include="wwwroot\lib\angular\app.js" />
     <None Include="wwwroot\lib\angular\Controllers\DashboardController.js" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\angular\NewFolder1\" />
+    <Folder Include="wwwroot\lib\angular\NewFolder\" />
+  </ItemGroup>
 </Project>
